--- a/p4.html
+++ b/p4.html
@@ -8,6 +8,7 @@
         </script>
     </head>
     <body>
+        <center><h1>Case Conversion</h1></center>
         <h1>Upper Case Conversion</h1>
         <form name="form1">
             Input String<input name="t1" type="text" value="" size="30"><br><br>
